--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
             android:id="@+id/imageViewResult"
             android:layout_width="75dp"
             android:layout_height="75dp"
-            android:padding="2dp" />
+            android:padding="2dp" android:contentDescription="@null"/>
 
         <TextView
             android:id="@+id/textViewResult"
@@ -45,12 +45,12 @@
 
 
     <Button
-        android:id="@+id/btnToggleCamera"
+        android:id="@+id/btnGallery"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_gravity="bottom|center"
         android:layout_marginBottom="50dp"
-        android:text="@string/toggle_camera"
+        android:text="@string/open_gallery"
         android:textAllCaps="false"
         android:textColor="@android:color/black" />
 
@@ -63,5 +63,6 @@
         android:textAllCaps="false"
         android:textColor="@android:color/black"
         android:visibility="gone" />
+
 
 </FrameLayout>
